src/test/deca/syntax/valid/custom/return/return_div.deca
// Description:
//   Return with condition div.
// Results:
//
//
// History:
//    created on 13/01/2022

{
   return a / b == 1;
}
