src/test/deca/syntax/invalid/custom/object/return_float.deca
// Description:
//   Return float.
// Results:
//
//
// History:
//    created on 13/01/2022

{
   float i = 1.56;
   return;
}
